--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = "https://example.com"
+baseURL = "https://roblesvargas97.github.io/my_launchx_blog/"
 languageCode = "en-us"
-title = "Bitácora de Viaje"
+title = "Bitácora de Viaje de Jesus Uriel"
 theme = "hugo-winston-theme"
 relativeURLs = true
 canonifyURLs = true
